--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container" id="big2">
       <div class="row" id="mid7">
           <div class="col" id="small8">
-              <h5>Top Articles</h5>
+              <h5>Add Employee</h5>
           </div>
       </div>
       <div class="row" id="mid8">
@@ -36,40 +36,36 @@
   <div class="container" id="big1">
       <div class="row" id="mid1">
           <div class="col" id="small1">
-              <h5>Search Parameters</h5>
           </div>
       </div>
       <div class="row" id="mid2">
           <div class="col" id="small2">
-              <p id="p1">Search Term:</p>
+              <p id="p1">Employee Name</p>
               <input id="text1" type="text" class="form-control" aria-label="Text input with checkbox">
           </div>
       </div>
-      <div class="row" id="mid3">
-          <div class="col" id="small3">
-              <p id="p2">Number of Records to Retrieve:</p>
-              <select class="custom-select" id="inputGroupSelect01">
-                  <option selected>Choose...</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-              </select>
-          </div>
-      </div>
+      <br>
       <div class="row" id="mid4">
           <div class="col" id="small4">
-              <p id="p3">Start Year (Optional):</p>
+              <p id="p3">Role</p>
               <input id="text2" type="text" class="form-control" aria-label="Text input with checkbox">
           </div>
       </div>
+      <br>
       <div class="row" id="mid5">
           <div class="col" id="small5">
-              <p id="p4">End Year (Optional):</p>
+              <p id="p4">Start Date</p>
               <input id="text3" type="text" class="form-control" aria-label="Text input with checkbox">
           </div>
       </div>
+      <br>
+      <div class="row" id="mid5">
+        <div class="col" id="small5">
+            <p id="p4">Monthly Rate</p>
+            <input id="text3" type="text" class="form-control" aria-label="Text input with checkbox">
+        </div>
+    </div>
+    <br>
       <div class="row" id="mid6">
           <div class="col-1" id="small6">
               <input id="search" class="btn btn-secondary" type="submit" value="Submit">
@@ -82,9 +78,8 @@
   </div>
 
 
-  <footer>
-      <h5>Made with lots and lots of LOVE</h5>
-  </footer>
+
+
         
     
 </body>
