--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
     </div>
   </div>
 
+  <div class="card text-center listbox">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    </div>
+  </div>
+  <br>
 
-  <div class="container" id="big2">
-      <div class="row" id="mid7">
-          <div class="col" id="small8">
-              <h5>Add Employee</h5>
+
+  <div class="card text-center listbox">
+      <div class="card-header">
+            Featured
           </div>
       </div>
       <div class="row" id="mid8">
@@ -33,7 +43,7 @@
       </div>
   </div>
   
-  <div class="container" id="big1">
+  <div class="container inputbox" id="big1">
       <div class="row" id="mid1">
           <div class="col" id="small1">
           </div>
