changed form ids

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row" id="mid2">
           <div class="col" id="small2">
             <p id="p1">Employee Name</p>
-            <input id="text1" type="text" class="form-control" placeholder="Jane Doe"
+            <input id="employee-name" type="text" class="form-control" placeholder="Jane Doe"
               aria-label="Text input with checkbox">
           </div>
         </div>
@@ -82,14 +82,14 @@
         <div class="row" id="mid4">
           <div class="col" id="small4">
             <p id="p3">Role</p>
-            <input id="text2" type="text" class="form-control" placeholder="CEO" aria-label="Text input with checkbox">
+            <input id="employee-role" type="text" class="form-control" placeholder="CEO" aria-label="Text input with checkbox">
           </div>
         </div>
         <br>
         <div class="row" id="mid5">
           <div class="col" id="small5">
             <p id="p4">Start Date</p>
-            <input id="text3" type="text" class="form-control" placeholder="01/25/1990"
+            <input id="employee-start" type="text" class="form-control" placeholder="01/25/1990"
               aria-label="Text input with checkbox">
           </div>
         </div>
@@ -97,7 +97,7 @@
         <div class="row" id="mid5">
           <div class="col" id="small5">
             <p id="p4">Monthly Rate</p>
-            <input id="text4" type="text" class="form-control" placeholder="5000" aria-label="Text input with checkbox">
+            <input id="employee-month-rate" type="text" class="form-control" placeholder="5000" aria-label="Text input with checkbox">
           </div>
         </div>
         <br>
