updates to rows function

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <div class="column col-md-2"><strong>Total Billed</strong></div>
           </div>
         </li>
+        <li class="list-group-item" id="list1">
+
+        </li>
 
 
       </ul>
